--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!-- head definitions go here -->
-    </head>
-    <body>
-        <!-- the content goes here -->
-        <p>Hello world!</p>
-    </body>
-</html>
+{% extends "head.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<body>
+
+
+</body>
+{% endblock %}
