added background image; static folder refactor

--- a/templates/data.html
+++ b/templates/data.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Our Data{% endblock %}
 {% block header %}
+<img src="pictures/logo/tree-logo.png" class="rounded-circle" alt="Tropical Bliss Logo" style="width: 5%;height: 5%;">
 <a href="/">&lt; Back</a>
 {% endblock %}
 
