--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}About Us{% endblock %}
 {% block header %}
+<img src="pictures/logo/tree-logo.png" class="rounded-circle" alt="Tropical Bliss Logo" style="width: 5%;height: 5%;">
 <a href="/">&lt; Back</a>
 {% endblock %}
 
@@ -12,37 +13,37 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <img src="aladdin.png" class="rounded-circle img-fluid" alt="Aladdin">
+            <img src="pictures/aboutus/aladdin.png" class="rounded-circle img-fluid" alt="Aladdin">
             <h2 class="text-center">Aladdin Al-Khatib</h2>
-            <a href="https://github.com/aladdinmck/"><img src="GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
-            <a href="https://www.linkedin.com/in/aladdin-mck/"><img src="linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
+            <a href="https://github.com/aladdinmck/"><img src="pictures/buttons/GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/aladdin-mck/"><img src="pictures/buttons/linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
         </div>
         <div class="col">
-            <img src="wesley.jpeg" class="rounded-circle img-fluid" alt="Wesley">
+            <img src="pictures/aboutus/wesley.jpeg" class="rounded-circle img-fluid" alt="Wesley">
             <h2 class="text-center">Wesley Baker</h2>
-            <a href="https://github.com/Wesley-Baker/"><img src="GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
-            <a href="https://www.linkedin.com/in/wesley-baker-295518232/"><img src="linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
+            <a href="https://github.com/Wesley-Baker/"><img src="pictures/buttons/GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/wesley-baker-295518232/"><img src="pictures/buttons/linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
         </div>
         <div class="col">
-            <img src="cameron.jpeg" class="rounded-circle img-fluid" alt="Cameron">
+            <img src="pictures/aboutus/cameron.jpeg" class="rounded-circle img-fluid" alt="Cameron">
             <h2 class="text-center">Cameron Bonesteel</h2>
-            <a href="https://github.com/cbonesteel/"><img src="GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
-            <a href="https://www.linkedin.com/in/cbonesteel/"><img src="linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
+            <a href="https://github.com/cbonesteel/"><img src="pictures/buttons/GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/cbonesteel/"><img src="pictures/buttons/linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col">
-            <img src="aiden.jpeg" class="rounded-circle img-fluid" alt="Aiden">
+            <img src="pictures/aboutus/aiden.jpeg" class="rounded-circle img-fluid" alt="Aiden">
             <h2 class="text-center">Aiden Hammond</h2>
-            <a href="https://github.com/aidenhammond/"><img src="GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
-            <a href="https://www.linkedin.com/in/aiden-hammond/"><img src="linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
+            <a href="https://github.com/aidenhammond/"><img src="pictures/buttons/GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/aiden-hammond/"><img src="pictures/buttons/linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
         </div>
         <div class="col">
-            <img src="keshav.jpeg" class="rounded-circle img-fluid" alt="Keshav">
+            <img src="pictures/aboutus/keshav.jpeg" class="rounded-circle img-fluid" alt="Keshav">
             <h2 class="text-center">Keshav Raviprakash</h2>
-            <a href="https://github.com/keshra123/"><img src="GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
-            <a href="https://www.linkedin.com/in/keshav-raviprakash/"><img src="linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
+            <a href="https://github.com/keshra123/"><img src="pictures/buttons/GitHub-Mark-64px.png" alt="GitHub" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/keshav-raviprakash/"><img src="pictures/buttons/linkedin-logo.png" alt="LinkedIn" height="30" width="30"></a>
         </div>
         <div class="col-sm-2"></div>
     </div>
