--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>Tropical Bliss | {% block title %}{% endblock %}</title>
 </head>
 
 <header>
-    <img src="tree-logo.png" class="rounded-circle" alt="Tropical Bliss Logo" style="width: 5%;height: 5%;">
     {% block header %}{% endblock %}
 </header>
 
 <body>
     {% block content %}{% endblock %}
 
-    <div class="mt-5 p-4 bg-light text-white text-center">
+    <div class="mt-5 p-4 tropical-blue text-white text-center">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4"><a href="/data">Our Data</a></div>
