--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,36 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
-{% block content %}
-<style>
-    .vertical-center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
-    }
+{% block header %}
+<div class="container-fluid p-5"></div>
+{% endblock %}
 
-    
-</style>
-<body>
+{% block content %}
+<div class="container-fluid">
+    <div class="container">
+        <img src="pictures/logo/full-logo.png" class="rounded-circle img-fluid mx-auto d-block" alt="Tropical Bliss Logo" style="width: 40%;height: 40%;">
+        <p class="text-center p-4">What's that.</p>
+    </div>
+
     <div class="container">
         <div class="text-center">
-          <p>
+            <p>
             <strong>How important is teacher to student ratio to you?</strong>
-          </p>
+            </p>
         </div>
         <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
-          <div class="btn-group-lg" role="group" aria-label="First group">
+            <div class="btn-group-lg" role="group" aria-label="First group">
             <button type="button" class="btn btn-light m-2">1</button>
             <button type="button" class="btn btn-light m-2">2</button>
             <button type="button" class="btn btn-light m-2">3</button>
             <button type="button" class="btn btn-light m-2">4</button>
             <button type="button" class="btn btn-light m-2">5</button>
-          </div>
+            </div>
         </div>
         
     </div>
 
-
-
-
-      <div class="container text-center">
-        <button type="button" class="btn btn-primary">Submit</button>
-      </div>
-
-
-</body>
+    <div class="container text-center">
+    <button type="button" class="btn btn-primary">Submit</button>
+    </div>
+</div>
 {% endblock %}
