add bootstrap styling

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -76,11 +76,14 @@
 <body>
 <div id="tooltip"></div><!-- div to hold tooltip. -->
 <div class="container">
-	<div>
-		<svg width="960" height="600" id="statesvg"></svg> <!-- svg to hold the map. -->
+	<div class="row">
+		<div class="col-lg-8">
+			<svg width="960" height="600" id="statesvg"></svg> <!-- svg to hold the map. -->
+		</div>
 	</div>
-	<div class="scoreboard">
-		<p> hi </p>
+		<div class="scoreboard">
+			<p> hi </p>
+		</div>
 	</div>
 </div>
 <script type="text/javascript" src="map.js"></script> <!-- creates map. -->
