--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,28 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block header %}
-<div class="container-fluid p-5"></div>
+<div class="container-fluid p-3"></div>
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid">
-    <div class="container">
+    <div class="container p-5">
         <img src="pictures/logo/full-logo.png" class="rounded-circle img-fluid mx-auto d-block" alt="Tropical Bliss Logo" style="width: 40%;height: 40%;">
-        <p class="text-center p-4">What's that.</p>
-    </div>
-
-    <div class="container">
-        <div class="text-center">
-            <p>
-            <strong>How important is teacher to student ratio to you?</strong>
-            </p>
-        </div>
-        <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group-lg" role="group" aria-label="First group">
-            <button type="button" class="btn btn-light m-2">1</button>
-            <button type="button" class="btn btn-light m-2">2</button>
-            <button type="button" class="btn btn-light m-2">3</button>
-            <button type="button" class="btn btn-light m-2">4</button>
-            <button type="button" class="btn btn-light m-2">5</button>
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col">
+                <p class="text-center p-4 mx-5">
+                    Want a change of pace in life? Start your journey with Tropical Bliss by 
+                    taking a quick survey and we will give you the states that best match your
+                    wildest dreams!
+                </p>
             </div>
+            <div class="col-sm-2"></div>
         </div>
-        
     </div>
 
     <div class="container text-center">
-    <button type="button" class="btn btn-primary">Submit</button>
+        <a href="/survey" class="btn btn-primary">Start Your Journey</a>
     </div>
 </div>
 {% endblock %}
