standardized back button

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <p class="text-center p-4 mx-5">
                     Want a change of pace in life? Start your journey with Tropical Bliss by 
                     taking a quick survey and we will give you the states that best match your
-                    wildest dreams!
+                    ideal paradise!
                 </p>
             </div>
             <div class="col-sm-2"></div>
