--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block header %}
-<div class="container-fluid p-5"></div>
+<a class="btn" href="/">
+    <img src="pictures/buttons/back.png" style="width: 75px;height: 75px;">
+</a>
 {% endblock %}
 
 {% block content %}
