I made a mistake :grimacing:

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block header %}
-<a class="btn" href="/">
-    <img src="pictures/buttons/back.png" style="width: 75px;height: 75px;">
-</a>
+<div class="container-fluid p-5"></div>
 {% endblock %}
 
 {% block content %}
