--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -2,8 +2,9 @@
 {% extends "base.html" %}
 {% block title %}Map{% endblock %}
 {% block header %}
-<img src="pictures/logo/tree-logo.png" class="rounded-circle" alt="Tropical Bliss Logo" style="width: 5%;height: 5%;">
-<a href="/">&lt; Back</a>
+<a class="btn" href="/">
+    <img src="pictures/buttons/back.png" style="width: 75px;height: 75px;">
+</a>
 {% endblock %}
 {% block content %}
 <style>
