--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,3 +7,33 @@ body {
 .tropical-blue {
     background-color: #A8C8EE;
 }
+.content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+.button {
+    background-color: white;opacity:0.6; /* Green */
+    border: white;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+}
+.button1:hover {
+    background-color: #4CAF50; opacity:0.6;
+    color: white;
+}
