--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,19 @@
             <p>
             <strong>How important is teacher to student ratio to you?</strong>
             </p>
+            <button class="button button1">Green</button>
         </div>
         <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
+            <div>
+                
+            <div>
             <div class="btn-group-lg" role="group" aria-label="First group">
-            <button type="button" class="btn btn-light m-2">1</button>
-            <button type="button" class="btn btn-light m-2">2</button>
-            <button type="button" class="btn btn-light m-2">3</button>
-            <button type="button" class="btn btn-light m-2">4</button>
-            <button type="button" class="btn btn-light m-2">5</button>
+                
+                <button type="button" class="btn btn-light m-2">1</button>
+                <button type="button" class="btn btn-light m-2">2</button>
+                <button type="button" class="btn btn-light m-2">3</button>
+                <button type="button" class="btn btn-light m-2">4</button>
+                <button type="button" class="btn btn-light m-2">5</button>
             </div>
         </div>
         
