added sand as footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body>
     {% block content %}{% endblock %}
 
-    <div class="mt-5 p-4 tropical-blue text-white text-center">
+    <div class="mt-5 p-4 text-white text-center sand">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4"><a href="/data">Our Data</a></div>
