--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,12 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
+
 }
 .tropical-blue {
     background-color: #A8C8EE;
+}
+.sand {
+    background-image: url('../pictures/background/sand.png');
+    background-size: 400px;
 }
