--- a/templates/survey.html
+++ b/templates/survey.html
@@ -34,19 +34,19 @@
                 
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-secondary active">
-                    <input type="radio" name="teacher" id="teacher1" autocomplete="off"> 0
+                    <input type="radio" name="teacher" id="teacher0" value="0" autocomplete="off"> 0
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="teacher" id="teacher2" autocomplete="off"> 1
+                    <input type="radio" name="teacher" id="teacher1" value="1" autocomplete="off"> 1
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="teacher" id="teacher3" autocomplete="off"> 2
+                    <input type="radio" name="teacher" id="teacher2" value="2" autocomplete="off"> 2
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="teacher" id="teacher4" autocomplete="off"> 3
+                    <input type="radio" name="teacher" id="teacher3" value="3" autocomplete="off"> 3
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="teacher" id="teacher5" autocomplete="off"> 4
+                    <input type="radio" name="teacher" id="teacher4" value="4" autocomplete="off"> 4
                   </label>
                 </div>
                 <br>
@@ -85,20 +85,21 @@
                   
                   <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-secondary active">
-                      <input type="radio" name="teacher" id="teacher1" autocomplete="off"> 0
+                      <input type="radio" name="crime" id="crime0" value="0" autocomplete="off"> 0
                     </label>
                     <label class="btn btn-secondary">
-                      <input type="radio" name="teacher" id="teacher2" autocomplete="off"> 1
+                      <input type="radio" name="crime" id="crime1" value="1" autocomplete="off"> 1
                     </label>
                     <label class="btn btn-secondary">
-                      <input type="radio" name="teacher" id="teacher3" autocomplete="off"> 2
+                      <input type="radio" name="crime" id="crime2" value="2" autocomplete="off"> 2
                     </label>
                     <label class="btn btn-secondary">
-                      <input type="radio" name="teacher" id="teacher4" autocomplete="off"> 3
+                      <input type="radio" name="crime" id="crime3" value="3" autocomplete="off"> 3
                     </label>
                     <label class="btn btn-secondary">
-                      <input type="radio" name="teacher" id="teacher5" autocomplete="off"> 4
+                      <input type="radio" name="crime" id="crime4" value="4" autocomplete="off"> 4
                     </label>
+                    
                   </div>
                   <br>
                   <br>
@@ -133,19 +134,19 @@
                     
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                       <label class="btn btn-secondary active">
-                        <input type="radio" name="teacher" id="teacher1" autocomplete="off"> 0
+                        <input type="radio" name="climate" id="climate0" value="0" autocomplete="off"> 0
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher2" autocomplete="off"> 1
+                        <input type="radio" name="climate" id="climate1" value="1" autocomplete="off"> 1
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher3" autocomplete="off"> 2
+                        <input type="radio" name="climate" id="climate2" value="2" autocomplete="off"> 2
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher4" autocomplete="off"> 3
+                        <input type="radio" name="climate" id="climate3" value="3" autocomplete="off"> 3
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher5" autocomplete="off"> 4
+                        <input type="radio" name="climate" id="climate4" value="4" autocomplete="off"> 4
                       </label>
                     </div>
                     <br>
@@ -182,19 +183,19 @@
                     
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                       <label class="btn btn-secondary active">
-                        <input type="radio" name="teacher" id="teacher1" autocomplete="off"> 0
+                        <input type="radio" name="health" id="health0" value="0" autocomplete="off"> 0
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher2" autocomplete="off"> 1
+                        <input type="radio" name="health" id="health1" value="1" autocomplete="off"> 1
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher3" autocomplete="off"> 2
+                        <input type="radio" name="health" id="health2" value="2" autocomplete="off"> 2
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher4" autocomplete="off"> 3
+                        <input type="radio" name="health" id="health3" value="3" autocomplete="off"> 3
                       </label>
                       <label class="btn btn-secondary">
-                        <input type="radio" name="teacher" id="teacher5" autocomplete="off"> 4
+                        <input type="radio" name="health" id="health4" value="4" autocomplete="off"> 4
                       </label>
                     </div>
                     <br>
