--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,3 +42,8 @@ body {
     background-color: #4CAF50; opacity:0.6;
     color: white;
 }
+.rectangles {
+   margin-left: 33%;
+   margin-right: 33%;
+
+}
