--- a/templates/survey.html
+++ b/templates/survey.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<form method="post">
+<form action="/survey" method="post">
 <div class="container p-4 my-4 border">
     
         <div class="text-center">
