--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -123,8 +123,8 @@
 <script type="text/javascript" src="map.js"></script> <!-- creates map. -->
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-	var data = {{ data|tojson|safe }};
-	
+	var data = JSON.parse({{ data|tojson }});
+	console.log(data)
 
 	function tooltipHtml(n, d){	/* function to create html content string in tooltip div. */
 		return "<h4>"+n+"</h4><table>"+
@@ -159,7 +159,7 @@
 		});*/
 	
 	/* draw states on id #statesvg */	
-	map.draw("#statesvg", {{ data }}, tooltipHtml);
+	map.draw("#statesvg", data, tooltipHtml);
 	
 	d3.select(self.frameElement).style("height", "600px"); 
 </script>
