help me dear god please help

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -159,7 +159,7 @@
 		});*/
 	
 	/* draw states on id #statesvg */	
-	map.draw("#statesvg", data, tooltipHtml);
+	uStates.draw("#statesvg", data, tooltipHtml);
 	
 	d3.select(self.frameElement).style("height", "600px"); 
 </script>
