--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,11 @@
             <div class="col-sm-2"></div>
             <div class="col">
                 <p class="text-center p-4 mx-5">
+                    <strong>
                     Want a change of pace in life? Start your journey with Tropical Bliss by 
                     taking a quick survey and we will give you the states that best match your
                     ideal paradise!
+                </strong>
                 </p>
             </div>
             <div class="col-sm-2"></div>
@@ -22,7 +24,7 @@
     </div>
 
     <div class="container text-center">
-        <a href="/survey" class="btn btn-primary">Start Your Journey</a>
+        <a href="/survey" class="submitbutton" style="background-color: transparent">Start Your Journey</a>
     </div>
 </div>
 {% endblock %}
