--- a/templates/survey.html
+++ b/templates/survey.html
@@ -21,9 +21,8 @@
               <strong>How important is education to you?</strong>
             </p> 
             
-            <div class="btncolor">
               
-                <div class="buttgr btn-group-toggle" data-toggle="buttons">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-secondary">
                     <input type="radio" name="teacher" id="teacher0" value="0" autocomplete="off" required>
                   </label>
@@ -41,7 +40,6 @@
                   </label>
                   
                 </div>
-              </div>
                 <br>  
         </div>
       </div>
