--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="container text-center">
-        <a href="/survey" class="submitbutton" style="background-color: transparent">Start Your Journey</a>
+        <a href="/survey" class="btn btn-primary">Start Your Journey</a>
     </div>
 </div>
 {% endblock %}
